# vag

./: Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
Formula/: vag.rb
examples/: spike.rs
src/: actions.rs  agent_events.rs  config.rs  dirscan.rs  gitdiff.rs  main.rs  state.rs  stats.rs  touched.rs  types.rs
src/discovery/: claude.rs  codex.rs  mod.rs
src/runtime/: mod.rs
src/ui/: activity.rs  ansi.rs  app.rs  dashboard.rs  diffview.rs  editbuf.rs  heatmap.rs  icons.rs  input.rs  mod.rs  pane.rs  prompts.rs  theme.rs
