[package]
name = "vag"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
crossbeam-channel = "0.5.16"
crossterm = "0.29.0"
dirs = "6.0.0"
libc = "0.2.186"
nucleo-matcher = "0.3.1"
portable-pty = "0.9.0"
ratatui = "0.30.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
toml_edit = "0.25.12"
uuid = { version = "1.23.4", features = ["v4"] }
